Update UI for landing page and dashboard

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "path-parser": "^2.0.2",
+    "react-reveal": "^1.2.2",
+    "react-waypoint": "^8.0.3",
     "sendgrid": "^5.2.3",
     "stripe": "^5.1.1"
   },
