--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,11 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.14",
     "react-stripe-checkout": "^2.6.3",
+    "react-waypoint": "^8.0.3",
     "redux": "^3.7.2",
     "redux-form": "^7.1.1",
     "redux-thunk": "^2.2.0"
